[IMP] account: Handle Partial Deductibility of Bills
Problem
---------
Many self-employees have the right to recognize some expenses in their
cost of operations (which lowers their revenue and so their income tax)
even if those expenses are only partially used in the context for their
profession. 

A good example would be a self-employed person working at home that can
reduce a part of their electricity bill as a professional expense. As
their electricity bill is for their entire house and most of it comes
for private use, they are only allowed to use a partial amount of that
bill as a professional expense (e.g. : 20%).

It is a bit annoying to handle everything by hand, as you would need to
manually calculate the proportion of many expenses by hand to then
encode them in Odoo, with varying income deductibility. Ultimately, the
encoded amounts will never match the justifying piece, complicating the
audit.

Objective
---------
Provide that service by allowing the user to specify which percentage
amount of a bill should really be taken into account (base & tax), and
which part should be put on a "private" account (aka, to be reimbursed
by the owner).

Solution
---------
1 - add the basic fields to store and display the deducible percentage
on the bills.
2 - add a step in the sync_dynamic_lines before the _sync_tax_lines that
adds a reverse of deduced lines with the same tax as the original so
that _sync_tax_lines automatically computes the correct taxes with this
new base included.
3 - update _sync_dynamic_lines to compute the correct non deductible
base and tax amounts.
4 - update the tax summary computation and tax total so that, the taxed
and untaxed amounts are not influenced by the non deductible amounts; to
the users, they pay the same thing untaxed and tax amounts should remain
the same.
5 - add some tests

task-4417062

closes odoo/odoo#197364

Signed-off-by: Laurent Smet (las) <las@odoo.com>

--- a/addons/account/views/account_journal_views.xml
+++ b/addons/account/views/account_journal_views.xml
@@ -93,6 +93,10 @@
                                                required="type in ('bank', 'cash', 'credit')"
                                                options="{'no_quick_create': True}"
                                                groups="account.group_account_readonly"/>
+                                        <field name="non_deductible_account_id"
+                                               invisible="type != 'purchase'"
+                                               options="{'no_quick_create': True}"
+                                               groups="account.group_account_readonly"/>
                                         <field name="profit_account_id" invisible="type not in ('cash', 'bank')" groups="account.group_account_readonly"/>
                                         <field name="loss_account_id" invisible="type not in ('cash', 'bank')" groups="account.group_account_readonly"/>
                                         <field name="refund_sequence" invisible="type not in ['sale', 'purchase']"/>
