--- a/addons/website_forum/views/forum_forum_templates_forum_all.xml
+++ b/addons/website_forum/views/forum_forum_templates_forum_all.xml
@@ -12,6 +12,7 @@
     <t t-call="website.layout">
         <t t-set="pageName" t-value="'website_forum'"/>
         <div id="wrap">
+            <div class="oe_structure" id="oe_structure_above_title_forum"/>
             <div class="oe_structure oe_empty" id="oe_structure_forum_all_top"/>
             <div id="o_wforum_forums_index_list" class="container pt-lg-4 pb-5">
                 <div class="row justify-content-center">
