--- a/addons/website_event/views/event_templates_page.xml
+++ b/addons/website_event/views/event_templates_page.xml
@@ -7,9 +7,15 @@
         <!-- Options -->
         <t t-set="opt_events_list_categories" t-value="is_view_active('website_event.opt_events_list_categories')"/>
         <div id="wrap" t-attf-class="o_wevent_event js_event d-flex flex-column h-100 #{'o_wevent_hide_sponsors' if hide_sponsors else ''}">
+            <t t-set="editor_sub_message">Following content will appear on all events.</t>
+            <t t-set="tooltip_message">Shared between all events</t>
+            <div class="oe_structure oe_empty"
+                id="oe_structure_website_event_layout_top"
+                t-att-data-editor-sub-message="editor_sub_message"
+                t-att-data-tooltip-message="tooltip_message"
+            />
             <t t-if="not hide_submenu" t-call="website_event.navbar"/>
             <t t-out="0"/>
-            <t t-set="editor_sub_message">Following content will appear on all events.</t>
             <div class="oe_structure oe_empty" id="oe_structure_website_event_layout_1" t-att-data-editor-sub-message="editor_sub_message"/>
         </div>
 
