--- a/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
+++ b/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
@@ -19,6 +19,7 @@
                 </div>
             </nav>
 
+            <div class="oe_structure" id="oe_structure_hr_recruitment_index_below_title"/>
             <!-- Content -->
             <div class="container oe_website_jobs">
                 <div class="row pt48 pb16">
@@ -123,6 +124,13 @@
         </nav>
         <!-- Content -->
         <div id="wrap" class="js_hr_recruitment">
+            <t t-set="editor_message">DROP BUILDING BLOCKS HERE TO MAKE THEM AVAILABLE ACROSS ALL JOBS</t>
+            <t t-set="tooltip_message">Shared between all jobs</t>
+            <div class="oe_structure oe_empty"
+                id="oe_structure_hr_recruitment_index_above_title"
+                t-att-data-editor-message="editor_message"
+                t-att-data-tooltip-message="tooltip_message"
+            />
             <div itemscope="itemscope" itemtype="https://schema.org/JobPosting">
                 <meta t-if="job.contract_type_id" itemprop="employmentType" t-att-content="job.contract_type_id.sudo().name"/>
                 <meta t-if="job.published_date" itemprop="datePosted" t-att-content="job.published_date"/>
