--- a/addons/mrp/views/mrp_production_views.xml
+++ b/addons/mrp/views/mrp_production_views.xml
@@ -52,7 +52,9 @@
                     <field name="message_needaction" column_invisible="True"/>
                     <field name="name" decoration-bf="1"/>
                     <field name="date_start" optional="show" widget="remaining_days"/>
-                    <field name="date_finished" optional="hide" widget="remaining_days"/>
+                    <field name="date_finished" optional="hide" widget="remaining_days" decoration-danger="date_deadline and date_finished &gt; date_deadline"/>
+                    <field name="expected_start" optional="hide" widget="mrp_remaining_days_unformatted"/>
+                    <field name="expected_finished" optional="hide" widget="mrp_remaining_days_unformatted" decoration-danger="expected_finished and date_deadline and expected_finished &gt; date_deadline"/>
                     <field name="date_deadline" widget="mrp_remaining_days_unformatted" invisible="state in ['done', 'cancel']" optional="hide"
                         decoration-danger="is_delayed"
                         decoration-bf="is_delayed"/>
@@ -729,6 +731,18 @@
             <field name="code">
             if records:
                 records.do_unreserve()
+            </field>
+        </record>
+
+        <record id="mrp_production_action_simulate" model="ir.actions.server">
+            <field name="name">Simulate Planning</field>
+            <field name="model_id" ref="mrp.model_mrp_production"/>
+            <field name="binding_model_id" ref="mrp.model_mrp_production"/>
+            <field name="binding_view_types">list</field>
+            <field name="state">code</field>
+            <field name="code">
+            if records:
+                records.action_simulate_planning()
             </field>
         </record>
 
