[IMP] various: add group by properties filter in search
Specifications :
Add search group by Properties in following places:
- Event Attendees
- Employees
- Maintenance Equipment
- Products
- Fleet
- HR Applicant
- HR Candidate
- Repair
- Stock Lot
- Stock Picking

Task-3989993

closes odoo/odoo#195923

Related: odoo/enterprise#78344
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/event/views/event_registration_views.xml
+++ b/addons/event/views/event_registration_views.xml
@@ -236,6 +236,7 @@
                             context="{'group_by': 'utm_medium_id'}"/>
                     <filter string="Source" name="group_by_utm_source_id" domain="[]"
                             context="{'group_by': 'utm_source_id'}"/>
+                    <filter string="Properties" name="group_by_registration_properties" context="{'group_by': 'registration_properties'}"/>
                </group>
             </search>
         </field>
