--- a/addons/hr/views/hr_employee_views.xml
+++ b/addons/hr/views/hr_employee_views.xml
@@ -47,6 +47,8 @@
                         <separator name="secondary_groupby_separator"/>
                         <separator name="managers_groupby_separator"/>
                         <filter name="group_category_ids" string="Tags" domain="[]" context="{'group_by': 'category_ids'}"/>
+                        <separator/>
+                        <filter string="Properties" name="group_by_employee_properties" context="{'group_by': 'employee_properties'}"/>
                     </group>
                 </search>
             </field>
