--- a/addons/product/views/product_views.xml
+++ b/addons/product/views/product_views.xml
@@ -267,6 +267,7 @@
                 <group expand="1" string="Group By">
                     <filter string="Product Type" name="group_by_type" context="{'group_by':'type'}"/>
                     <filter string="Product Category" name="group_by_categ_id" context="{'group_by':'categ_id'}"/>
+                    <filter string="Product Properties" name="group_by_product_properties" context="{'group_by': 'product_properties'}"/>
                 </group>
             </search>
         </field>
