--- a/addons/stock/views/stock_lot_views.xml
+++ b/addons/stock/views/stock_lot_views.xml
@@ -112,6 +112,7 @@
                     <filter name="group_by_location" string="Location" domain="[]" context="{'group_by': 'location_id'}" groups="stock.group_stock_multi_locations"/>
                     <filter name="group_by_creation_date" string="Creation date" domain="[]" context="{'group_by': 'create_date'}"/>
                     <filter name="group_by_Company" string="Company" domain="[]" context="{'group_by': 'company_id'}"/>
+                    <filter name="group_by_lot_properties" string="Properties" context="{'group_by': 'lot_properties'}"/>
                 </group>
             </search>
         </field>
