--- a/addons/purchase/views/res_partner_views.xml
+++ b/addons/purchase/views/res_partner_views.xml
@@ -18,6 +18,14 @@
                     </div>
                     <field name="property_purchase_currency_id" options="{'no_create': True, 'no_open': True}" groups='base.group_multi_currency'/>
                 </group>
+            </field>
+    </record>
+
+    <record id="view_partner_account_form" model="ir.ui.view">
+            <field name="name">res.partner.purchase.property.form.inherit</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="account.view_partner_property_form"/>
+            <field name="arch" type="xml">
                 <field name="property_supplier_payment_term_id" position="before">
                     <field name="buyer_id" domain="[('share', '=', False)]" widget="many2one_avatar_user"/>
                 </field>
